<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.webscrapingclient.MainActivity" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginRight="41dp"
        android:layout_marginTop="111dp"
        android:text="@string/title"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textViewTitle"
        android:layout_below="@+id/textViewTitle"
        android:text="@string/subtitle"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/textViewTitle"
        android:src="@drawable/flag" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewSubtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/textViewChoiceProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profiles_title"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewChoiceType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonProfile"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/poi_title"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup2"
            android:layout_centerInParent="true"
            android:layout_marginTop="60dp"
            android:text="@string/button" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewChoiceType"
            android:layout_below="@+id/textViewChoiceType" >

            <RadioButton
                android:id="@+id/radioTypeRestaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:checked="true"
                android:text="@string/restaurants" />

            <RadioButton
                android:id="@+id/radioTypeHotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/hotels" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textViewChoiceProfile"
            android:layout_marginTop="22dp"
            android:text="@string/details" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewChoiceProfile"
            android:layout_alignTop="@+id/buttonProfile" />

    </RelativeLayout>

</RelativeLayout>