<?xml version="1.0" encoding="utf-8"?>


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="97dp"
                            android:layout_height="97dp"
                            android:layout_marginTop="25dp"
                            android:layout_alignLeft="@+id/textView5"
                            android:layout_alignParentTop="true"/>

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_below="@+id/textView7"
                            android:textSize="25sp"
                            android:text="TextView" />

                        <Button
                            android:id="@+id/button4"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignRight="@+id/ratingBar1"
                            android:layout_marginBottom="14dp"
                            android:text="@string/next" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/textView4"
                            android:layout_toRightOf="@+id/imageView1"
                            android:text="@string/contacts"
                            android:layout_marginLeft="20dp"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/textView1"
                            android:layout_toRightOf="@+id/imageView1"
                            android:text="@string/address"
                            android:layout_marginLeft="20dp"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_below="@+id/textView2"
                            android:layout_marginTop="35dp"
                            android:background="@color/green"
                            android:padding="10dp"
                            android:textColor="@android:color/white"
                            android:text="@string/cuisines_list"
                            android:textSize="12sp" />

                        <RatingBar
                            android:id="@+id/ratingBar1"
                            android:layout_width="240dp"
                            android:layout_height="50dp"
                            android:layout_below="@+id/imageView1"
                            android:layout_marginTop="57dp"
                            android:layout_toRightOf="@+id/textView6" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/ratingBar1"
                            android:layout_alignLeft="@+id/imageView1"
                            android:text="@string/stars"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_below="@+id/textView9"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="46dp"
                            android:text="@string/rating"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <Button
                            android:id="@+id/button3"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/textView5"
                            android:layout_alignBottom="@+id/textView5"
                            android:layout_toLeftOf="@+id/button4"
                            android:text="@string/detailsRating" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/textView5"
                            android:layout_below="@+id/button3"
                            android:layout_marginTop="32dp"
                            android:text="@string/reviews"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/textView6"
                            android:layout_below="@+id/textView6"
                            android:layout_marginTop="34dp"
                            android:text="@string/avg_price"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_below="@+id/textView8"
                            android:layout_marginTop="36dp"
                            android:background="@color/green"
                            android:padding="10dp"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            android:text="@string/services" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_below="@+id/textView10"
                            android:textSize="25sp"
                            android:text="TextView" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_below="@+id/textView11"
                            android:layout_marginTop="36dp"
                            android:background="@color/green"
                            android:padding="10dp"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            android:text="@string/policies" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_below="@+id/textView12"
                            android:textSize="25sp"
                            android:text="TextView" />

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/imageView1"
                            android:layout_marginTop="25dp"
                            android:layout_marginLeft="20dp"
                            android:text="@string/name_poi"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold" />
                        
        </RelativeLayout>
        
     
   



